--- a/html a5.2.html
+++ b/html a5.2.html
@@ -26,7 +26,7 @@
     </div>
     
     <span><p style=" font-size: 30px; text-transform: uppercase; float: left;"><a href="html a5.1.html"> GO to previous page </a></p></span>
-    <span><p style="font-size: 30px; text-transform: uppercase; float: right;"><a href="HTML A5.HTML"> GO to first page</a></p></span>
+    <span><p style="font-size: 30px; text-transform: uppercase; float: right;"><a href="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/923c4e33f2fb5e4521c12c1ceef511c10e48081f/HTML%20A5.HTML"> GO to first page</a></p></span>
 
 </body>
 </html>
