--- a/html a5.1.html
+++ b/html a5.1.html
@@ -23,7 +23,7 @@
     </div>
     <div>
     <p style=" text-align: center; font-size: 30px ;float: left;"><a href="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/923c4e33f2fb5e4521c12c1ceef511c10e48081f/HTML%20A5.HTML"> BACK</a></p>
-    <p style=" text-align: center; font-size: 30px ;float: right;"><a href="html a5.2.html"> NEXT</a></p>
+    <p style=" text-align: center; font-size: 30px ;float: right;"><a href="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/8733c5619b4b0a5facfea168175fd383bed84ea0/html%20a5.2.html"> NEXT</a></p>
 </div>
 </body>
 </html>
