--- a/html a5.2.html
+++ b/html a5.2.html
@@ -25,7 +25,7 @@
         <img src="wheel.png" class="backtyre">
     </div>
     
-    <span><p style=" font-size: 30px; text-transform: uppercase; float: left;"><a href="html a5.1.html"> GO to previous page </a></p></span>
+    <span><p style=" font-size: 30px; text-transform: uppercase; float: left;"><a href="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/8733c5619b4b0a5facfea168175fd383bed84ea0/html%20a5.1.html"> GO to previous page </a></p></span>
     <span><p style="font-size: 30px; text-transform: uppercase; float: right;"><a href="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/923c4e33f2fb5e4521c12c1ceef511c10e48081f/HTML%20A5.HTML"> GO to first page</a></p></span>
 
 </body>
