--- a/html a5.2.html
+++ b/html a5.2.html
@@ -19,7 +19,7 @@
     
     <div class="road"></div>
     <div class="city"></div>
-    <div class="car"><img src="car.png" style="width: 400px; height: 200px;"></div>
+    <div class="car"><img src="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/4bdb72781b157730d5b096d815a9207a7ac129a2/car.png" style="width: 400px; height: 200px;"></div>
     <div class="tyre" >
         <img src="wheel.png" class="maintyre">
         <img src="wheel.png" class="backtyre">
