--- a/html a5.2.html
+++ b/html a5.2.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MOVING CAR</title>
     <link rel="stylesheet" href="html a5.2.css">
     <style>
         body{
-            background-image: url(skyhtml.jpg);
+            background-image: url(https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/53e7f4dd5bfba8a0a1a904b371fd935ef2530895/skyhtml.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             overflow-x: hidden;
@@ -21,8 +21,8 @@
     <div class="city"></div>
     <div class="car"><img src="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/4bdb72781b157730d5b096d815a9207a7ac129a2/car.png" style="width: 400px; height: 200px;"></div>
     <div class="tyre" >
-        <img src="wheel.png" class="maintyre">
-        <img src="wheel.png" class="backtyre">
+        <img src="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/71940b062402e35ba9affc28afa6e088a9bad034/wheel.png" class="maintyre">
+        <img src="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/71940b062402e35ba9affc28afa6e088a9bad034/wheel.png" class="backtyre">
     </div>
     
     <span><p style=" font-size: 30px; text-transform: uppercase; float: left;"><a href="https://rawcdn.githack.com/ShriAdityaGupta/HTMLCSSA5/8733c5619b4b0a5facfea168175fd383bed84ea0/html%20a5.1.html"> GO to previous page </a></p></span>
